--- a/example/todolist/package.json
+++ b/example/todolist/package.json
@@ -6,7 +6,7 @@
     "build": "codellms build"
   },
   "dependencies": {
-    "codegpt": "../../",
+    "codellms": "../../",
     "express": "^4.18.2"
   }
 }
