--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "codellms": "./bin/run"
   },
-  "homepage": "https://github.com/dodellms/codellms",
+  "homepage": "https://github.com/codellms/codellms",
   "license": "Apache License 2.0",
   "main": "dist/index.js",
   "repository": "https://github.com/codellms/codellms",
@@ -73,7 +73,7 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "bugs": "https://github.com/https://github.com/codellms/codellms/issues",
+  "bugs": "https://github.com/codellms/codellms/issues",
   "keywords": [
     "oclif", "codegpt", "codellms", "openai", "code generate"
   ],
