Put the project type into the configuration.

--- a/example/todolist/codellms.toml
+++ b/example/todolist/codellms.toml
@@ -4,6 +4,9 @@ express='4.18.2'
 [basic]
 language = "node"
 arch = "mvc"
+type="api"
 [openai]
 api_key = ""
 temperature=0.5
+[api]
+stype="RESTful"
