--- a/example/todolist-sqlite-dbmigration/package.json
+++ b/example/todolist-sqlite-dbmigration/package.json
@@ -8,7 +8,11 @@
   "dependencies": {
     "codellms": "../../",
     "express": "^4.18.2",
+    "mongoose": "^7.3.3",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.1"
   }
 }
