Add folders structure constraints

--- a/example/multiple-feature-file/codellms.toml
+++ b/example/multiple-feature-file/codellms.toml
@@ -4,6 +4,7 @@ fastapi='0'
 language = "python"
 arch = "mvc"
 type="api"
+folders=["src/models", "src/controller", "src/services", "src/utils"]
 [openai]
 api_key = ""
 model="gpt-3.5-turbo"
